--- a/ProgWebII/appsettings.json
+++ b/ProgWebII/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ProgWebIIDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,7000;Database=ProgWebII;User Id=sa;Password=abc123@;Encrypt=True;TrustServerCertificate=True;"
   }
 }
